--- a/Modulo_1/8.Listas_tuplas.ipynb
+++ b/Modulo_1/8.Listas_tuplas.ipynb
@@ -252,6 +252,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ejemplo canek\n",
+    "#elemento para crear la lista\n",
+    "lista = list(range(1,11))\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lista.append(11)\n",
     "print(lista_ejercicio)"
    ]
@@ -262,7 +274,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista.insert(:0)\n",
+    "#ejemplo canek\n",
+    "lista.append(11)\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_ejercicio.insert(:0)\n",
     "print(lista_ejercicio)"
    ]
   },
@@ -272,8 +295,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ejemplo canek\n",
+    "lista.insert(0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_ejercicio.remove(5)\n",
+    "print(lista_ejercicio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ejemplo canel\n",
     "lista.remove(5)\n",
-    "print(lista_ejercicio)"
+    "print(lista)"
    ]
   },
   {
@@ -282,8 +326,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sublista = lista_ejercicio[2:22]\n",
+    "sublista = lista_ejercicio[2:2:2]\n",
     "print(sublista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ejemplo canek\n",
+    "sublista = lista[:5]\n",
+    "print(lista)"
    ]
   },
   {
@@ -301,18 +356,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para las tuplas se utiliza () "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Crear una tupla vacía\n",
+    "#uso de parentesis para especificar que son tuplas\n",
+    "\n",
     "tupla_vacia = ()\n",
     "\n",
     "# Crear una tupla con elementos\n",
+    "tupla = (1,2,3,4,5)\n",
     "\n",
+    "# Crear una tupla con un solo elemento\n",
+    "#especificamos con la coma para que no lo interprete como una operacion\n",
     "\n",
-    "# Crear una tupla con un solo elemento\n"
+    "tupla_un_elemento = (1,)"
    ]
   },
   {
@@ -324,9 +391,12 @@
     "tupla = (1, 2, 3, 4, 5)\n",
     "\n",
     "# Acceder a un elemento por índice\n",
+    "#quiero el elemento de la tupla numero 1\n",
+    "print(tupla[1])\n",
     "\n",
     "\n",
-    "# Acceder al último elemento\n"
+    "# Acceder al último elemento\n",
+    "print(tupla[-1])\n"
    ]
   },
   {
@@ -353,7 +423,8 @@
     "tupla = (1, 2, 3, 4, 5)\n",
     "\n",
     "# Obtener una subtupla\n",
-    "\n",
+    "#podemos dividir las tuplas\n",
+    "sutupla  = tupla[1:4]\n",
     "print(subtupla)"
    ]
   },
@@ -424,12 +495,14 @@
    "source": [
     "# Crear una lista de tareas\n",
     "tareas = [\"Comprar leche\", \"Llamar al doctor\", \"Enviar correo\"]\n",
-    "\n",
     "# Agregar una nueva tarea\n",
-    "\n",
+    "tareas.append('estudiar para el examen de programación')\n",
     "# Eliminar una tarea que ya se completó\n",
+    "tareas.remmove(\"Llamar al doctor\")\n",
+    "# Modificar una tarea\n",
+    "#moficamos en la posicion especifica [0] y agregamos\n",
     "\n",
-    "# Modificar una tarea\n"
+    "tareas[0] = 'Comprar leche y pan'"
    ]
   },
   {
@@ -471,7 +544,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#lo convertimos en mutable\n",
+    "coordenadas = [40.712776, -74.005974]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creamos nueva variable\n",
+    "coordenadas_new = coordenadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordenadas_new[0]=30"
+   ]
   }
  ],
  "metadata": {
